fix: support dark mode with css

--- a/media/base.css
+++ b/media/base.css
@@ -6,26 +6,55 @@ body {
 
   line-height: 1.5;
   padding: 1em 1em;
-  color: #555;
 }
 
 h1 {
     margin-top: 1em;
     margin-bottom: 0.5em;
-    color: #333;
-}
-h1 a {
-    color: #333;
-}
-h1 a:hover {
-    color: #333;
 }
 
 .publications h2 {
     margin-top: 2em;
     margin-bottom: 1em;
-    color: #333;
 }
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #121212;
+        color: #ccc;
+    }
+    h1 {
+        color: #ccc;
+    }
+    h1 a {
+        color: #ccc;
+    }
+    h1 a:hover {
+        color: #ccc;
+    }
+    .publications h2 {
+        color: #ccc;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    body {
+        color: #555;
+    }
+    h1 {
+        color: #333;
+    }
+    h1 a {
+        color: #333;
+    }
+    h1 a:hover {
+        color: #333;
+    }
+    .publications h2 {
+        color: #333;
+    }
+}
+
 
 /* ref: https://stackoverflow.com/a/16012979 */
 .blink {
